v 1.1.5 everything before buffet

--- a/Resource/BaseObject/Property List.plist
+++ b/Resource/BaseObject/Property List.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>Key</key>
-	<string>jmmjmm</string>
+	<string>jmmom</string>
 	<key>DomainName</key>
 	<string>http://www.jummum.co</string>
 	<key>PingAddress</key>
